--- a/Android-App/README
+++ b/Android-App/README
@@ -1,28 +1,16 @@
 Upon starting the app, the Home screen is launched, allowing the user to select a quick search or to make a recipe. (Quick search, as the name implies, is faster and for an ingredient or such.)
 
-Quick Search:
-This app searches the USDA food database for a user-entered ingredient and returns nutritional information about it.
+Upon loading the Quick Search, the user can enter the amount they desire, the unit selected from a spinner (to avoid misspellings or entering impossible units), and as they begin to type their ingredient, the auto-complete text will begin to show them ingredients that contain their typing.
+After submitting a new page will load saying " the amount unit of this ingredient" and then list the nutrients of their ingredient.
 
-It uses a Spinner for the units so the user can not enter anything except a usable unit.
+Upon loading Recipe, the user will do the same as Quick Search, enter the amount, the unit and type and selsect their ingredient, then add the ingredient to the recipe.
+Submitting that ingredient will display a quick message saying it was successfully added. The text boxes are then reset so user doesn't have to manually clear and re-enter.
+After adding desired ingredients, the user will press "done adding ingredients" which unloks the "recipe name" box, and the final submit button.
+After adding a recipe name and clicking done, the user is taken to the recipe options page, where they then select to view ingredients or nutrients.
 
-It also uses an auto-complete text-bar to help users find the correct ingredient, as well as helping not enter the wrong format and help with spelling errors.
+Clicking nutrients will show the totals of the nutrients for the added ingredients, as well as the recipe name.
 
-It creates a copy of the database in the internal memory of the phone.
+Clicking ingredients will display all of the ingredients the user added.
 
-When the search button is clicked, it queries the database and stores the nutritional info of the ingredient as a list.
 
-It then passes that info, one at a time, to a new Activity (what you see on the phone at any given time, i.e a new page) where it then converts that info into a list view for easier viewing.
-
-Recipe: 
-The same as quick search, except:
-- Multiple ingredients are added on the spot.
-- A recipe name is added.
-- The total of the nutrients are passed instead of the individual values.
-- unit, amount, and ingredient names are not passed, just the recipe name.
-
-TO BE WORKED ON:
-- Ingredients cannot be subtracted, so if you accidentally add one, you have to start over.
-- A running list of the ingredients is not kept, meaning you can't view what the ingredient holds after submitting. *** Proabably be the next step to add***
-- Currently, the same ListView page is used for both the QuickSearch and Recipe. This means that recipe ingredients aren't listed, instead of just the recipe name it says "no data no data of RecipeName". ***Instead of the same page, a new page will probably be added that will also hold a button to view the ingredients***
-- Recipes are not saved.
 
